--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ configurations.all {
 dependencies {
 	 
     // HSE
- 	 compile 'com.github.HybridSystemsEnvironment:HybridSystemsEnvironment:1.1.0'
+ 	 compile 'com.github.HybridSystemsEnvironment:HybridSystemsEnvironment:-SNAPSHOT'
  	// Stock Market API
 	compile group: 'pl.zankowski', name: 'iextrading4j-all', version: '2.1.1'
  	
@@ -25,5 +25,14 @@ dependencies {
 	testCompile group: 'junit', name: 'junit', version: '4.9'
 }
 
+jar {
+  manifest { 
+    attributes "Main-Class": 'bouncingball.BouncingBallApplication'
+  }  
 
+  from {
+    configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+  }
+}
+ 
  
