Added simple math executable to build fild

--- a/build.gradle
+++ b/build.gradle
@@ -60,5 +60,9 @@ task(runInverter, dependsOn: 'classes', type: JavaExec) {
     main = 'inverter.application.HSEApplication'
     classpath = sourceSets.main.runtimeClasspath
 }
+task(runSimpleMath, dependsOn: 'classes', type: JavaExec) {
+    main = 'simplemath.application.HSEApplication'
+    classpath = sourceSets.main.runtimeClasspath
+}
   
  
